Fixed warning: Serializing PageImpl instances as-is is not supported
